--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ buildscript {
         compose_version = '1.4.0-beta02'
         hilt_version = '2.44.2'
         room_version = '2.5.0'
+        nav_version = '1.8.35-beta'
+        compose_hilt_navigation_version = '1.0.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
