--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_version = '1.4.0-beta02'
+        material3_version = '1.1.0-alpha08'
         hilt_version = '2.44.2'
         room_version = '2.5.0'
         nav_version = '1.8.35-beta'
