--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,11 +70,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material3:material3:$material3_version"
 
-
     //Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'org.junit.jupiter:junit-jupiter'
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     //Room
@@ -86,6 +83,9 @@ dependencies {
     implementation("io.github.raamcosta.compose-destinations:core:$nav_version")
     ksp("io.github.raamcosta.compose-destinations:ksp:$nav_version")
     implementation "androidx.hilt:hilt-navigation-compose:$compose_hilt_navigation_version"
+
+    //Coil
+    implementation("io.coil-kt:coil-compose:$coil_version")
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.mockk:mockk:$mockkVersion"
