--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         room_version = '2.5.0'
         nav_version = '1.8.35-beta'
         compose_hilt_navigation_version = '1.0.0'
+        coil_version = '2.2.2'
 
         mockkVersion = '1.13.4'
     }
