--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     kapt("androidx.room:room-compiler:$room_version")
     implementation "androidx.room:room-ktx:$room_version"
 
+    //DataSore
+    implementation("androidx.datastore:datastore:$data_store_version")
+
     //navigation
     implementation("io.github.raamcosta.compose-destinations:core:$nav_version")
     ksp("io.github.raamcosta.compose-destinations:ksp:$nav_version")
