--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         material3_version = '1.1.0-alpha08'
         hilt_version = '2.44.2'
         room_version = '2.5.0'
+        data_store_version = '1.0.0'
         nav_version = '1.8.35-beta'
         compose_hilt_navigation_version = '1.0.0'
         coil_version = '2.2.2'
