--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'com.google.dagger.hilt.android' version "2.44" apply false
     id 'com.google.protobuf' version '0.8.15' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version '11.0.0' apply false
 }
