--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
     ext {
-        compose_version = '1.4.0-beta02'
-        material3_version = '1.1.0-alpha08'
+        compose_version = '1.5.0-alpha01'
+        material3_version = '1.1.0-beta01'
         hilt_version = '2.44.2'
-        room_version = '2.5.0'
+        room_version = '2.5.1'
         data_store_version = '1.0.0'
         nav_version = '1.8.35-beta'
         compose_hilt_navigation_version = '1.0.0'
