--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 buildscript {
     ext {
-        compose_version = '1.5.0-alpha01'
-        material3_version = '1.1.0-beta01'
+        compose_version = '1.5.0-alpha03'
+        material3_version = '1.1.0-rc01'
         hilt_version = '2.44.2'
         room_version = '2.5.1'
         data_store_version = '1.0.0'
         nav_version = '1.8.35-beta'
         compose_hilt_navigation_version = '1.0.0'
         coil_version = '2.2.2'
+
         mockkVersion = '1.13.4'
+        test_compose_version = '1.5.0-alpha03'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:${hilt_version}"
